...
                    haptic(.success)
                    withAnimation(.spring().delay(0.25)) {
                        self.showSuccess.toggle()
                    }
                }
            })
            .navigationTitle("People")
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    createPerson
                }
                ToolbarItem(placement: .navigationBarLeading) {
                    refreshButton
...
        } label: {
            Symbols.plus
                .font(.system(.headline, design: .rounded).bold()
                )
        }
        .disabled(vm.isLoading)
        .accessibilityIdentifier("createButton")
    }
    
    var refreshButton: some View {
        Button {
            Task {
                await vm.fetchUsers()
...
